<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/account" />
    <item
        android:id="@+id/nav_destination"
        android:icon="@drawable/ic_location_on_black_24dp"
        android:title="@string/popular_destination" />
    <item
        android:id="@+id/nav_hotel"
        android:icon="@drawable/find_hotel_24"
        android:title="@string/find_hotel" />
    <item
        android:id="@+id/nav_support"
        android:icon="@drawable/ic_assignment_late_black_24dp"
        android:title="@string/support" />
    <item
        android:id="@+id/nav_memories"
        android:icon="@drawable/ic_baseline_emoji_emotions_24"
        android:title="@string/memories" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:title="@string/logout" />
</menu>

