<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.michael.afrivac.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.michael.afrivac.ui.account.AccountFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/nav_support"
        android:name="com.michael.afrivac.ui.support.SupportFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_support" />

    <fragment
        android:id="@+id/nav_findhotel"
        android:name="com.michael.afrivac.ui.findHotel.FindHotelFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_find_hotel" />


    <fragment
        android:id="@+id/nav_popular_destination"
        android:name="com.michael.afrivac.ui.popular_destination.PopularDestinationFragment"
        android:label="@string/popular_destination"
        tools:layout="@layout/fragment_popular_destination" />
</navigation>