<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WalletPageActivity"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_arrow"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hotelName"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:textAlignment="center"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/profile"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"
            android:layout_gravity="center"
            android:layout_weight="1"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mywallet"
        android:textColor="#000"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paymentmethod"
        android:textColor="#000"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pay_pal"
            android:textColor="#000"
            android:background="@drawable/round_white_background"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginEnd="10dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credit_debit"
            android:background="@drawable/round_blue_background"
            android:textColor="#fff"
            android:textAllCaps="false"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_weight="1"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cardNumber"
        android:textStyle="normal"
        android:layout_marginTop="20dp"
        />

    <com.uphyca.creditcardedittext.CreditCardNumberEditText
        android:id="@+id/credit_card_number"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="numberPassword"
        android:background="@drawable/round_white_background"
        android:drawableStart="@drawable/mastercard_logo"
        android:textColor="#000"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/validUntil"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/dimension_10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cvv"
            android:layout_weight="1"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:hint="MM/YY"
            android:background="@drawable/round_white_background"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:maxLength="5"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:inputType="datetime"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/round_white_background"
            android:layout_weight="1.5"
            android:maxLines="1"
            android:maxEms="3"
            android:maxLength="3"
            android:inputType="numberPassword"
            android:paddingStart="10dp"/>

    </LinearLayout>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lastDigits"
        android:layout_gravity="end"
        android:textSize="8sp"
        android:layout_marginTop="3dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_name"
        android:textStyle="normal"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:inputType="text"
        android:background="@drawable/round_white_background"
        android:paddingStart="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_details"
        android:background="@drawable/rounded_blue_background"
        android:textColor="#fff"
        android:textAllCaps="false"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/lock"
        android:layout_marginTop="5dp"
        android:text="This is a secure ssl encrypted payment"
        android:layout_gravity="center_horizontal"/>


</LinearLayout>