<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    app:cardCornerRadius="15dp"
    android:layout_margin="10dp"
    android:background="@color/white">
    <GridLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/popular_image"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/placedesc"
            android:layout_columnWeight="1"
            tools:src="@drawable/pop_cairo" />

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="1dp"
            android:orientation="vertical"
            android:layout_columnWeight="3"
            android:padding="5dp"
            android:paddingBottom="0dp">

            <TextView
                android:id="@+id/popular_town"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000"
                tools:text="@string/cairo"
                android:drawableEnd="@drawable/loveimage"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/popular_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/egypt"
                android:textColor="@color/colorBlue"/>

            <TextView
                android:id="@+id/popular_place_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/cairoDescription"
                android:textSize="10sp"
                android:textColor="#000" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/star1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/star"
                    android:src="@drawable/starbright"/>
                <ImageView
                    android:id="@+id/star2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/star"
                    android:src="@drawable/starbright"/>
                <ImageView
                    android:id="@+id/star3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/star"
                    android:src="@drawable/starbright"/>
                <ImageView
                    android:id="@+id/star4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/star"
                    android:src="@drawable/starbright"/>
                <ImageView
                    android:id="@+id/star5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/star"
                    android:src="@drawable/stardull"/>

                <TextView
                    android:id="@+id/popular_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textColor="#000"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    tools:text="@string/_4_1" />

                <TextView
                    android:id="@+id/popular_review"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textColor="#000"
                    android:textSize="10sp"
                    tools:text="@string/_2_731" />

            </LinearLayout>

        </LinearLayout>
    </GridLayout>
</androidx.cardview.widget.CardView>