<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="150dp"
    android:layout_height="150dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    app:cardCornerRadius="15dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:src="@drawable/camel"
        android:id="@+id/discover_image"
        android:contentDescription="@string/placedesc"
        android:background="#fff"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/txt_dest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/cairo"
        android:textColor="#fff"
        android:layout_gravity="bottom"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="16dp"
        android:textSize="24sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/egypt"
        android:textColor="#fff"
        android:layout_below="@id/txt_dest"
        android:id="@+id/txt_name"
        android:layout_gravity="bottom"
        android:drawableStart="@drawable/place"
        android:layout_marginStart="16dp"
        android:textSize="14sp"
        android:layout_marginBottom="10dp"/>

</androidx.cardview.widget.CardView>