<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotAuthSecondActivity">

    <LinearLayout
        android:id="@+id/logo_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/dimension_45dp"
        android:layout_marginTop="@dimen/dimension_73dp">

        <ImageView
            android:layout_width="@dimen/dimension_50dp"
            android:layout_height="wrap_content"
            android:src="@drawable/logoafri" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimension_1dp"
            android:gravity="center_vertical"
            android:layout_marginStart="@dimen/dimension_4dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/dimension_24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/verification_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimension_67dp"
        android:layout_marginStart="@dimen/dimension_82dp"
        android:layout_marginEnd="@dimen/dimension_82dp"
        android:layout_below="@id/logo_layout"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:fontFamily="@font/poppins"
        android:text="@string/verification_code_text"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/dimension_12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/verification_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimension_42dp"
        android:layout_marginTop="@dimen/dimension_22dp"
        android:layout_marginBottom="@dimen/dimension_5dp"
        android:layout_below="@id/verification_text"
        android:fontFamily="@font/poppins_light"
        android:text="@string/enter_verification_code"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/forgot_auth_verification_code"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimension_40dp"
        android:layout_marginStart="@dimen/dimension_37dp"
        android:layout_marginEnd="@dimen/dimension_37dp"
        android:layout_below="@id/verification_textview"
        android:background="@drawable/circular_drawable01"
        android:paddingStart="@dimen/dimension_10dp"
        android:paddingEnd="@dimen/dimension_10dp"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/forgot_auth_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimension_37dp"
        android:layout_marginEnd="@dimen/dimension_37dp"
        android:layout_marginBottom="@dimen/dimension_109dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:background="@drawable/curve"
        android:fontFamily="@font/poppins_light"
        android:textAllCaps="false"
        android:text="@string/reset"
        android:textColor="@android:color/white"
        android:textSize="@dimen/dimension_18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dimension_59dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimension_32dp"
            android:layout_marginEnd="@dimen/dimension_4dp"
            android:fontFamily="@font/poppins_light"
            android:gravity="center_vertical"
            android:text="@string/noverificationcode"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/resend_verification_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimension_32dp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/poppins_light"
            android:gravity="center_vertical"
            android:text="@string/resend"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>